kubernetes/apps/monitoring/app/postgres-exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: default
  labels:
    app: postgres-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: nextcloud-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
          args:
            - --web.listen-address=:9187
          ports:
            - name: metrics-nc
              containerPort: 9187
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
        - name: immich-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
          args:
            - --web.listen-address=:9188
          ports:
            - name: metrics-immich
              containerPort: 9188
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: default
  labels:
    app: postgres-exporter
spec:
  selector:
    app: postgres-exporter
  ports:
    - name: nextcloud
      port: 9187
      targetPort: 9187
    - name: immich
      port: 9188
      targetPort: 9188
